--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,66 +15,35 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  build-and-deploy:
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v4
+      # Step 1: Checkout the code
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-      # Install dependencies
+      # Step 2: Set up Node.js environment
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
           node-version: '16'
 
+      # Step 3: Install dependencies
       - name: Install dependencies
         run: npm install
 
-      # Run tests
+      # Step 4: Run tests (optional if you have tests)
       - name: Run tests
         run: npm test
 
-      # Build the project (?)
+      # Step 5: Build the project
       - name: Build project
         run: npm run build
 
-      # Generate/Archive build artifacts (?)
-      - name: Archive build artifacts
-        uses: actions/upload-artifact@v4
+      # Step 6: Deploy to GitHub Pages
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
         with:
-          name: build-artifacts
-          path: ./build
-
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
-          
-  # This would in theory run deployment with Heroku
-  deployment:
-    runs-on: ubuntu-latest
-    needs: build # Ensure the build step succeeds before deployment
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-  
-      - name: Install Heroku CLI
-        run: curl https://cli-assets.heroku.com/install.sh | sh
-  
-      - name: Deploy to Heroku
-        env:
-          HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
-          HEROKU_APP_NAME: your-heroku-app-name
-        run: |
-          git remote add heroku https://git.heroku.com/${{ env.HEROKU_APP_NAME }}.git
-          git push heroku main
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./build  # Directory to publish to GitHub Pages (e.g., dist, build, public, etc.)
